# bonfire

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  config.example.toml  config.toml  docker-entrypoint.sh  gradle.properties  settings.gradle
rust-auth/: Cargo.toml  config.toml
rust-auth/src/: admin_get_sessions.rs  bind_oauth.rs  cancel_email_change.rs  change_email.rs  change_name.rs  change_password.rs  check_recovery_token.rs  check_tfa_status.rs  delete.rs  enable_email_tfa.rs  generate_tfa_secret.rs  get_by_id.rs  get_by_name.rs  get_by_token.rs  get_jwk_set.rs  get_meta_users.rs  get_oauth2_client.rs  get_oauth2_grants.rs  get_oauth2_token.rs  get_oauth2_userinfo.rs  get_oauth_result.rs  get_oauth_url.rs  get_openid_metadata.rs  get_security_settings.rs  get_session.rs  get_sessions.rs  get_tfa_info.rs  hard_ban.rs  lib.rs  login_email.rs  login_internal.rs  login_refresh.rs  mark_online.rs  oauth2_authorize_accept.rs  oauth2_authorize_info.rs  recover_password.rs  register_email.rs  resend_verification.rs  revoke_oauth2_grant.rs  send_password_recovery.rs  (+9 more)
rust-auth/src/util/: has_user_context.rs  mod.rs  session.rs  tfa.rs  user_agent.rs
rust-bonfire/: Cargo.toml
rust-bonfire/.sqlx/: query-09f95f69e21e46be51105a17ee7ab6fad978234b9b9d23f9fd4e33f09c0937b9.json  query-0cec612cd1779702dc27e223a663d3eb0e863fe9643dd7ca43e12b2fcd37d1bc.json  query-171370884fc80a3bf740ea6a14402aa3a50ac5d3ebaacfadd56d290046b552ad.json  query-254f9c79f884ed807b4dca7aa8bb3cde6298ee38bd1e712944a31a1b9e7bc363.json  query-2648a595cb33c4644b8b986a870778ff937e3862aca9cade1e2f78a1f79b6376.json  query-2d4bb88f6a0744f561f7aa0657e0cde7db8b40350deca91c77a2397b03e6778f.json  query-358fa86f3caba0f392ed1ae7a533136904f60c89e4ec23ae96569761e544776a.json  query-4581d503081ef850ab46e4a26c78b18048a7f2cd07f192c8ab16d616b64e2d24.json  query-7cfba7d3afc8c4801ecfece08ba7f4a7d3d798d173726206c47ede098648f892.json  query-b875a2825fc5e170005f80a821519246c246bcce0f98009e34ec24734df64cae.json  query-bd91febe807da769812abde210ce2f53c471268d020e14bb423fa0d773c02d49.json  query-c4c63b69b4d1965ce3461ec65b37fe5cfa1d9ffb8d29d9d412f9cad318ac7952.json  query-c4dd3b681c1f1c3d14f26bafffced47a027bf1891a730910c8adcd36356e7f5b.json  query-c50c1446a7fa29676ac2ca56ffa6995c76dc1c383f55bb4d18a195580bd5234c.json  query-cde5cbb0c54588c858f58a1591fdd7131141fa50600897b648d940b44164b8b8.json  query-d384796756e197bcfe5c32ed64c0903ad51883e550476ec539951014c8fb20dd.json  query-d4260a598ec4b097353361e21c74e2f7804166deb3a1995b5decb0c1d66ed091.json  query-d4757426d9f48829c0e6e991b10d68d7e22765ccf3cb397165aae1e2221559c9.json  query-d7c0d1da1aed2b7d407a9bb917d672d3e16037763ba0a4d2d031475eb19e7c58.json  query-de66dbd266d18bde8d69705ec6edd36ed598712ad71cd09f17a4cac1402c7ec6.json  query-f00ab8209a7afc07f6d2b0122691301dbf5c6b100a355572476509c5be9c815e.json  query-f0f72f7bfb5825d1cd71db997490a24671e7a5d37e9e339e5ee81d7840088e12.json  query-f6d4300b84409408e9d734b02c65e8a07a504458442526fa2b3adbda695c8279.json  query-f82ffc519697e08e03774216be12f0dd35389197155de1026b20d50d7c02ad05.json  query-f88a55c12e1618c81ab68421e5f5c33cccb6f80a3b787c528b8348c57f7b84da.json  query-f9a60d39886d9d76b137ef443e29300dea93cbaefd64b46a227d169791fb8a48.json
rust-bonfire/src/: context.rs  main.rs  secrets.rs
rust-bonfire/src/consts/: achi.rs  chat.rs  collisions.rs  mod.rs  page.rs  publication.rs  publication_type.rs
rust-bonfire/src/mechanics/: daily_task.rs
rust-bonfire/src/mechanics/daily_task/: fandom.rs  progress.rs  seed.rs  task.rs
rust-bonfire/src/models/: daily_task.rs  mod.rs
rust-bonfire/src/routes/: mod.rs  recount_level.rs
rust-bonfire/src/routes/daily_task/: check_in.rs  fandom_chances.rs  mod.rs  task.rs
rust-core/: Cargo.toml
rust-core/src/: config.rs  lib.rs  page_info.rs  prelude.rs  twoway.rs  util.rs
rust-core/src/models/: mod.rs  page_type.rs
rust-core/src/services/: auth.rs  email.rs  gif.rs  images.rs  level.rs  mod.rs  notification.rs  profile.rs  security.rs
rust-core/src/services/auth/: jwt.rs  tfa.rs  user.rs
rust-core/src/services/email/: types.rs
rust-core/src/services/images/: base64_blob.rs  options.rs
rust-email/: Cargo.toml
rust-email/src/: lib.rs
rust-email/templates/: cancel_email_change.rs.html  cancel_email_change_plain.rs.html  login_attempt.rs.html  login_attempt_plain.rs.html  oauth2_authorize.rs.html  oauth2_authorize_plain.rs.html  password_changed.rs.html  password_changed_plain.rs.html  recover_password.rs.html  recover_password_plain.rs.html  tfa_email.rs.html  tfa_email_plain.rs.html  verify_email.rs.html  verify_email_plain.rs.html
rust-level/: Cargo.toml
rust-level/src/: lib.rs
rust-level/src/consts/: achi.rs  collisions.rs  fandoms.rs  lvl.rs  mod.rs  status.rs
rust-level/src/daily_task/: fandom.rs  mod.rs  progress.rs  seed.rs  task.rs
rust-level/src/methods/: check_in.rs  get_daily_task.rs  get_daily_task_fandoms.rs  get_level_cached.rs  mod.rs  recount_level.rs
rust-melior/: Cargo.toml
rust-melior/src/: backends.rs  context.rs  error.rs  main.rs  schema.rs
rust-melior/src/data_loaders/: auth.rs  mod.rs
rust-melior/src/models/: color.rs  image.rs  mod.rs  pages.rs  user.rs
rust-melior/src/oauth/: authorize.rs  jwks.rs  mod.rs  openid_configuration.rs  token.rs  userinfo.rs
rust-melior/src/utils/: connection.rs  language.rs  mod.rs  ok.rs  permissions.rs
rust-notification/: Cargo.toml
rust-notification/src/: lib.rs
rust-notification/src/methods/: get_by_id.rs  get_do_not_disturb.rs  get_notifications.rs  mod.rs  post.rs  read.rs  read_all.rs  set_do_not_disturb.rs  set_token.rs
rust-notification/src/sender/: fcm.rs  mod.rs
rust-profile/: Cargo.toml
rust-profile/src/: lib.rs
rust-profile/src/methods/: admin_put_badge.rs  admin_remove_badge.rs  admin_set_nickname_color.rs  get_account_customization.rs  get_badge.rs  get_birthday.rs  get_profile_customization.rs  get_user_badges.rs  is_age_at_least.rs  mod.rs  set_active_badge.rs  set_badge_shelf.rs  set_birthday.rs  set_nickname_color.rs  set_show_badge_shelf.rs
(+2627 files in other folders)
