[package]
name = "rust-bonfire"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
konst = { version = "0.3", default-features = false, features = ["iter"] }
num_enum = "0.6"
futures-util = "0.3"
lazy_static = "1.4"
