[package]
name = "c-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
config = "0.13"
tarpc = { version = "0.33", features = ["full"] }
anyhow = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "signal"] }
tokio-test = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "ipnetwork", "rust_decimal", "bigdecimal"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
thiserror = "1.0"
num_enum = "0.6"
educe = { version = "0.4", features = ["Eq", "PartialEq", "Clone"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tracing = { version = "0.1", features = ["attributes"] }
strum_macros = "0.25"
jsonwebtoken = "8.2"
nanoid = "0.4"
base64 = "0.21"
stubborn-io = "0.3.2"
serde_repr = "0.1"
