[package]
name = "b-level"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
c-core = { path = "../rust-core" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
lazy_static = "1.4"
konst = "0.3"
num_enum = "0.7"
serde_repr = "0.1"
chrono = "0.4"
futures-util = "0.3"
tracing = "0.1"
serde_json = "1.0"
rand = "0.9"
rand_xoshiro = "0.7"
