[package]
name = "b-melior"
version = "0.1.0"
edition = "2021"

[dependencies]
c-core = { path = "../rust-core" }
c-auth = { path = "../rust-auth" }
c-email = { path = "../rust-email" }
b-level = { path = "../rust-level" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["http2", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-client-ip = "0.5"
async-graphql = { version = "7.0", default-features = false, features = ["chrono", "dataloader", "opentelemetry", "graphiql", "tempfile"] }
async-graphql-axum = { version = "7.0" }
tower-http = { version = "0.5", features = ["cors"] }
sentry = { version = "0.32", features = ["tracing"] }
sentry-tower = { version = "0.32", features = ["http"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
async-trait = "0.1"
o2o = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
aws-sdk-s3 = { version = "1.19", features = ["rt-tokio"] }
aws-config = "1.1"
nanoid = "0.4"
strum = { version = "0.26", features = ["derive"] }
