[package]
name = "b-melior"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
c-core = { path = "../rust-core" }
c-auth = { path = "../rust-auth" }
c-email = { path = "../rust-email" }
b-level = { path = "../rust-level" }
b-notification = { path = "../rust-notification" }
b-profile = { path = "../rust-profile" }
b-security = { path = "../rust-security" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["http2", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-client-ip = "1.1"
async-graphql = { version = "7.0", default-features = false, features = ["chrono", "dataloader", "opentelemetry", "graphiql", "tempfile"] }
async-graphql-axum = { version = "7.0" }
tower-http = { version = "0.6", features = ["cors"] }
sentry = { version = "0.42", features = ["tracing"] }
sentry-tower = { version = "0.42", features = ["http"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
async-trait = "0.1"
o2o = "0.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nanoid = "0.4"
strum = { version = "0.27", features = ["derive"] }
aws-sdk-s3 = { version = "1.25", features = ["behavior-version-latest"] }
lru = "0.16"
url = "2.5.2"
