[package]
name = "b-notification"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
c-core = { path = "../rust-core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
serde_json = "1.0"
google-fcm1 = "5.0"
deadqueue = "0.2"
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7"
