[package]
name = "b-profile"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
c-core = { path = "../rust-core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
cached = { version = "0.50", features = ["async"] }
